scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,7 @@ ul.todo_content li {
   background: #1cc1a0;
   border-radius: 10px;
 }
+
+.user_content_list::-webkit-scrollbar-thumb:hover {
+  background: #069b7d;
+}
